fixed z-index for 2Joker-Option

--- a/style/main.css
+++ b/style/main.css
@@ -95,7 +95,7 @@ h3 {
 	background-color: rgba(44, 44, 44, 0.5);
 	justify-content: space-around;
 	align-items: center;
-	z-index: 20;
+	z-index: 50;
 	padding-top: 80px;
 	padding-bottom: 80px;
 }
